Refs #17731 - Fix alignment on firefox

--- a/eea/jquery/plugins/annotator/annotator.css
+++ b/eea/jquery/plugins/annotator/annotator.css
@@ -973,6 +973,12 @@
   line-height: 1.3;
 }
 
+@-moz-document url-prefix() {
+  .annotator-erratum .annotator-controls {
+    padding-top: 0;
+  }
+}
+
 .erratum-quote {
   padding: 0.5em;
   max-height: 12px;
